--- a/assets/sass/_reset.scss
+++ b/assets/sass/_reset.scss
@@ -6,3 +6,8 @@
 body {
   line-height: 1.5;
 }
+
+img {
+  display: block;
+  max-width: 100%;
+}
