--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -19,3 +19,6 @@ $font-weight-regular: 400;
 // Layout
 $layout-2-columns: 768px;
 $layout-3-columns: 1224px;
+
+// Spacing
+$spacing: pxToRem(30px);
