--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -19,16 +19,14 @@ p {
 }
 
 header {
-  margin-bottom: pxToRem(75px);
-  padding-top: pxToRem(75px);
+  padding-block: pxToRem(60px);
   grid-area: header;
   width: 80%;
-  // width: pxToRem(300px);
   text-align: center;
 
   h1,
   h2 {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   h1 {
@@ -44,79 +42,94 @@ header {
 main {
   display: grid;
   grid-area: main;
-  width: 84%;
-  margin-inline: auto;
-  //width: pxToRem(315px);
-  row-gap: pxToRem(30px);
+  justify-items: center;
+  gap: $spacing;
 }
 
 .card {
-  width: pxToRem(315px);
-  //width: pxToRem(350px);
+  width: min(84%, pxToRem(315px));
   height: pxToRem(250px);
-  padding: pxToRem(30px);
+  padding: $spacing;
   border-radius: 5px;
   border-top: 4px solid;
-  box-shadow: 2px 2px 8px 5px rgb(0 0 0 / 0.05);
+  box-shadow: 2px 4px 12px 5px rgb(0 0 0 / 0.05);
+
+  p {
+    font-size: pxToRem(14px);
+  }
 
   h2 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+    margin-bottom: pxToRem(16px);
   }
 
   .img-wrapper {
-    margin-top: pxToRem(30px);
+    margin-top: $spacing;
     display: flex;
     justify-content: flex-end;
   }
 
   &:nth-child(1) {
-    //grid-area: 1 / 2 / 3 / 3;
-    border-top-color: $color-red;
-  }
-
-  &:nth-child(2) {
-    //grid-area: 2 / 1 / 4 / 2;
     border-top-color: $color-cyan;
   }
 
+  &:nth-child(2) {
+    border-top-color: $color-red;
+  }
+
   &:nth-child(3) {
-    //grid-area: 3 / 2 / 5 / 3;
     border-top-color: $color-blue;
   }
 
   &:nth-child(4) {
-    //grid-area: 5 / 7 / 2 / 3;
     border-top-color: $color-orange;
   }
 }
 
 @media (min-width: $layout-2-columns) {
+  header {
+    width: pxToRem(505px);
+
+    h1,
+    h2 {
+      font-size: 2rem;
+    }
+  }
+
   main {
     grid-template-columns: repeat(2, 1fr);
-    column-gap: pxToRem(30px);
+  }
+
+  .card {
+    width: pxToRem(315px);
   }
 }
 
 @media (min-width: $layout-3-columns) {
   header {
-    width: pxToRem(505px);
+    padding-top: pxToRem(115px);
+    padding-bottom: pxToRem(75px);
   }
 
   main {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, pxToRem(125px));
-    column-gap: pxToRem(30px);
-    row-gap: pxToRem(15px);
+    justify-items: center;
     width: pxToRem(1115px);
   }
 
   .card {
+    width: pxToRem(350px);
+
+    h2 {
+      font-size: 1.4rem;
+    }
+
     &:nth-child(1) {
-      grid-area: 1 / 2 / 3 / 3;
+      grid-area: 2 / 1 / 4 / 2;
     }
 
     &:nth-child(2) {
-      grid-area: 2 / 1 / 4 / 2;
+      grid-area: 1 / 2 / 3 / 3;
     }
 
     &:nth-child(3) {
